--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,12 +7,179 @@
 /* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
 
-/* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+body {
+  align-items: center;
+}
+
+button:hover {
+  background: rgba(108, 140, 255, 1);
+}
+
+input:hover {
+  border: 1px solid rgba(0, 0, 0, 1);
+}
+
+input:active {
+  border: 1px solid rgba(78, 117, 255, 1);
+}
+
+.form {
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+}
+
+.search-input {
+  width: 252px;
+  height: 36px;
+  border-radius: 4px;
+  padding: 0;
+  padding-left: 16px;
+  align-items: center;
+  border-width: 1px;
+  border-color: rgba(128, 128, 128, 1);
+}
+
+.search-input:placeholder-shown {
+  font-family: 'Montserrat', sans-serif;
+  color: rgba(128, 128, 128, 1);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 1.5;
+}
+
+.button {
+  width: 91px;
+  height: 40px;
+  border-radius: 8px;
+  padding-top: 8px;
+  padding-right: 16px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 1.5;
+  background: rgba(78, 117, 255, 1);
+  color: rgba(255, 255, 255, 1);
+  border: none;
+}
+
+/**/
+.hidden {
+  display: none;
+}
+
+#search-form {
+  margin: 20px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  object-fit: cover;
+  max-height: 100%;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.loader {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 1.5;
+  flex-wrap: wrap;
+  width: 256px;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+}
+
+.gallery {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 24px;
+  margin: 0 auto;
+  padding-left: 156px;
+  padding-right: 156px;
+  width: 1200px;
+}
+
+.gallery li {
+  width: calc((100% - 48px) / 3);
+  max-width: 360px;
+  padding: 0;
+  margin: 0;
+  height: 200px;
+  cursor: pointer;
+  border: 1px solid rgba(128, 128, 128, 1);
+}
+
+.gallery a {
+  height: 152px;
+  width: 100%;
+}
+
+.gallery img {
+  width: 100%;
+  height: 152px;
+}
+
+.gallery p {
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 1.33;
+  display: flex;
+  flex-direction: column;
+}
+
+.gallery p span {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 24px;
+  letter-spacing: 2;
+}
+
+.gallery div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 32px;
+}
+
+.load-more {
+  width: 125px;
+  height: 40px;
+  border-radius: 8px;
+  padding-top: 8px;
+  padding-right: 16px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 1.5;
+  background: rgba(78, 117, 255, 1);
+  color: rgba(255, 255, 255, 1);
+  border: none;
+  margin-top: 32px;
+  margin-bottom: 44px;
+}
